--- a/config.json
+++ b/config.json
@@ -1,42 +1,42 @@
 {
     "General":{
         "device":"cuda",
-        "type":"full",
+        "type":"depth",
         "model_timm":"vit_base_patch16_384",
         "emb_dim":768,
         "hooks":[2, 5, 8, 11],
         "read":"projection",
-        "resample_dim":256,
+        "resample_dim":128,
         "optim":"adam",
         "lr_backbone":1e-5,
         "lr_scratch":3e-4,
-        "loss_depth":"ssi",
+        "loss_depth":"mse",
         "loss_segmentation":"ce",
         "momentum":0.9,
         "epochs":20,
         "batch_size":1,
-        "path_model":"models",
-        "path_predicted_images":"output",
-        "seed":0,
+        "path_model":"./data/models",
+        "path_predicted_images":"./data/output",
+        "seed":42,
         "patch_size":16
     },
     "Dataset":{
         "paths":{
-            "path_dataset":"./datasets",
-            "list_datasets":["inria", "nyuv2", "posetrack"],
-            "path_images":"images",
-            "path_segmentations":"segmentations",
-            "path_depths":"depths"
+            "path_dataset":"./data",
+            "list_datasets":["synthetic_data"],
+            "path_images":"noisy_512",
+            "path_segmentations":"clean_512_label",
+            "path_depths":"clean_512_label"
         },
         "extensions":{
-            "ext_images":".jpg",
+            "ext_images":".png",
             "ext_segmentations":".png",
-            "ext_depths":".jpg"
+            "ext_depths":".png"
         },
         "splits":{
-            "split_train":0.6,
-            "split_val":0.2,
-            "split_test":0.2
+            "split_train":0.9,
+            "split_val":0.05,
+            "split_test":0.05
         },
         "transforms":{
             "resize":384,
@@ -53,7 +53,7 @@
     },
     "wandb":{
         "enable":false,
-        "username":"younesbelkada",
+        "username":"todo",
         "images_to_show":3,
         "im_h":540,
         "im_w":980
